changed color-text;color-background and font-size

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-
 <head>
 <link rel="stylesheet" href="<link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
-</head><title>Flight Simulator.ng</title>
-<body style="color:brown;background-color:grey">
+</head>
+<title>Flight Simulator.ng</title>
+<body style="color:brown;background-color:white;font-size:25px;">
 <h1 style="text-align: center;font-family:cookie;">B.I welcomes you</h1>
 <em><h4 style="height:15px;text-align:center;">The cockpit manuals</h4></em>
 <p style="text-align:center;font-family:cookie;">you have a world that exposes you completely</br>in details to gain familiarity with rudder pedals,flight yoke,and the human machine interface</br>i remember talking to one of the student pilots about simulation programs </P>
@@ -16,7 +16,7 @@
 <img src="img/bi.jpg" alt="description" style="height:300px;width:300px;padding:10px;border:20px;margin:30px;">
 <img src="img/pl3.jpg" alt="description" style="height:300px;width:300px;padding:10px;border:10px;margin:30px;">
 <img src="img/pl4.jpg" alt="description" style="height:300px;width:300px;padding:10px;border:20px;margin:30px;">
-<p style="text-align:center;color:blue;font-family:cookie;">code camp 2017 an exclusive shoot for web developers,cascading styles sheeters,java pros and every other friendly</br>related stuffs.</p>
+<p style="text-align:center;color:green;font-family:cookie;">code camp 2017 an exclusive shoot for web developers,cascading styles sheeters,java pros and every other friendly</br>related stuffs.</p>
 <p style="text-align:center;font-family:cookie;">For more information click <a href="https://www.facebook.com/madeoluwa">here</a></p>
 <p>get to check these lists out for dope updates<br>
 <div><ul style="font-family:cookie;">
