--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
 <link rel="stylesheet" href="<link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
 </head>
 <title>Flight Simulator.ng</title>
+<button class="btn success">Success</button>
+<button class="btn info">Info</button>
+<button class="btn warning">Warning</button>
+<button class="btn danger">Danger</button>
+<button class="btn default">Default</button>
 <body style="color:brown;background-color:white;font-size:25px;">
+    <script>function myFunction() {
+   document.getElementById("demo").innerHTML = "!!!!SURPRISE.";
+}</script>
 <h1 style="text-align: center;font-family:cookie;">B.I welcomes you</h1>
 <em><h4 style="height:15px;text-align:center;">The cockpit manuals</h4></em>
+<p id="demo">nice deals!!!!</p>
+<button type="button" onclick="myFunction()">Try it</button>
 <p style="text-align:center;font-family:cookie;">you have a world that exposes you completely</br>in details to gain familiarity with rudder pedals,flight yoke,and the human machine interface</br>i remember talking to one of the student pilots about simulation programs </P>
 <img style="height:300px;width:300px;padding:25px;border:35px;margin:45px;" src="img/bee.jpg" alt="description">
 <img style="height:300px;width:300px;padding:25px;border:35px;margin:45px;" src="img/pl1.jpg" alt="description">
